tests/pass/InterfaceA.java
package pass;

/**
 * @author Kasper
 */

interface InterfaceA {
    public int f(int x);
}
